# quantum_playground

./: gaussian.py  main.py
gaussian/: pyproject.toml
modules/core/: pyproject.toml
modules/into/: main.py  pyproject.toml
quantum_sim/: Cargo.toml
quantum_sim/src/: main.rs
