[project]
name = "quantum-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pennylane>=0.44.1",
    "jax",
    "jaxopt",
]

[tool.uv.workspace]
members = [
    "modules/core",
    "modules/api",
    "modules/into",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"

